--- a/MLcourse/linear-regression.html
+++ b/MLcourse/linear-regression.html
@@ -26,7 +26,7 @@
 <meta name="author" content="Mohamad Ghassany">
 
 
-<meta name="date" content="2016-12-28">
+<meta name="date" content="2016-12-29">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="apple-mobile-web-app-capable" content="yes">
@@ -152,8 +152,11 @@ code > span.in { color: #60a0b0; font-weight: bold; font-style: italic; } /* Inf
 </ul></li>
 </ul></li>
 <li class="chapter" data-level="" data-path="pw-2.html"><a href="pw-2.html"><i class="fa fa-check"></i>PW 2</a><ul>
-<li class="chapter" data-level="" data-path="pw-2.html"><a href="pw-2.html#rmarkdown"><i class="fa fa-check"></i>RMarkdown</a></li>
-<li class="chapter" data-level="" data-path="pw-2.html"><a href="pw-2.html#multiple-linear-regression-1"><i class="fa fa-check"></i>Multiple Linear Regression</a></li>
+<li class="chapter" data-level="2.4" data-path="pw-2.html"><a href="pw-2.html#reporting"><i class="fa fa-check"></i><b>2.4</b> Reporting</a><ul>
+<li class="chapter" data-level="2.4.1" data-path="pw-2.html"><a href="pw-2.html#markdown"><i class="fa fa-check"></i><b>2.4.1</b> Markdown</a></li>
+<li class="chapter" data-level="2.4.2" data-path="pw-2.html"><a href="pw-2.html#r-markdown"><i class="fa fa-check"></i><b>2.4.2</b> R Markdown</a></li>
+</ul></li>
+<li class="chapter" data-level="2.5" data-path="pw-2.html"><a href="pw-2.html#multiple-linear-regression-1"><i class="fa fa-check"></i><b>2.5</b> Multiple Linear Regression</a></li>
 </ul></li>
 <li class="part"><span><b>Classification</b></span></li>
 <li class="chapter" data-level="3" data-path="logistic-regression.html"><a href="logistic-regression.html"><i class="fa fa-check"></i><b>3</b> Logistic Regression</a><ul>
@@ -374,7 +377,7 @@ RSS &amp;= (y_1 - \hat{\beta_0} - \hat{\beta_1} x_1)^2 + (y_2 - \hat{\beta_0} - 
 </ul>
 <div class="rmdinsight">
 <p>
-Click <a href="https://egarpor.shinyapps.io/least-squares/">here</a> to see the influence of the distance employed in the sum of squares. Try to minimize the sum of squares for the different datasets. The choices of intercept and slope that minimize the sum of squared distances for a kind of distance are not the optimal for a different kind of distance.
+Click <a href="https://egarpor.shinyapps.io/least-squares/" target="_blank">here</a> to see the influence of the distance employed in the sum of squares. Try to minimize the sum of squares for the different datasets. The choices of intercept and slope that minimize the sum of squared distances for a kind of distance are not the optimal for a different kind of distance.
 </p>
 </div>
 </div>
@@ -438,7 +441,7 @@ Figure 1.1: Visualization of the ANOVA decomposition. SST measures the variation
 </div>
 <div class="rmdinsight">
 <p>
-Click <a href="https://egarpor.shinyapps.io/anova/">here</a> to see the ANOVA decomposition and its dependence on <span class="math inline"><em>σ</em><sup>2</sup></span> and <span class="math inline"><span class="math inline">\(\hat\sigma^2\)</span></span>.’
+Click <a href="https://egarpor.shinyapps.io/anova/" target="_blank">here</a> to see the ANOVA decomposition and its dependence on <span class="math inline"><em>σ</em><sup>2</sup></span> and <span class="math inline"><span class="math inline">\(\hat\sigma^2\)</span></span>.’
 </p>
 </div>
 <p>The ANOVA table summarizes the decomposition of the variance. Here is given in the layout employed by <code>R</code>.</p>
