--- a/teaching/index.html
+++ b/teaching/index.html
@@ -52,7 +52,7 @@
   
 
    
-  <meta property="og:description" content="## ESILV - Leonardo da Vinci Engineering School ### Since 2014 * Machine Learning. + Prepared by me for Spring 16-17: [Course repository](../ML_course/index.html &quot;Introduction to Machine Learning -- Spring 16-17&quot;). * Probabilities &amp; Statistics. + Prepared by me for Spring 16-17: Course, Exercices. + Fall 16-17 Spring 15-16 Fall 15-16...">
+  <meta property="og:description" content="## ESILV - Leonardo da Vinci Engineering School ### Since 2014 * Machine Learning. + Prepared by me for Spring 16-17: [Course repository](../MLcourse/index.html &quot;Introduction to Machine Learning -- Spring 16-17&quot;). * Probabilities &amp; Statistics. + Prepared by me for Spring 16-17: Course, Exercices. + Fall 16-17 Spring 15-16 Fall 15-16...">
   
 
 
@@ -78,7 +78,7 @@
   
 
   
-  <meta name="twitter:description" content="## ESILV - Leonardo da Vinci Engineering School ### Since 2014 * Machine Learning. + Prepared by me for Spring 16-17: [Course repository](../ML_course/index.html &quot;Introduction to Machine Learning -- Spring 16-17&quot;). * Probabilities &amp; Statistics. + Prepared by me for Spring 16-17: Course, Exercices. + Fall 16-17 Spring 15-16 Fall 15-16...">
+  <meta name="twitter:description" content="## ESILV - Leonardo da Vinci Engineering School ### Since 2014 * Machine Learning. + Prepared by me for Spring 16-17: [Course repository](../MLcourse/index.html &quot;Introduction to Machine Learning -- Spring 16-17&quot;). * Probabilities &amp; Statistics. + Prepared by me for Spring 16-17: Course, Exercices. + Fall 16-17 Spring 15-16 Fall 15-16...">
   
 
   
@@ -230,7 +230,7 @@
 <ul>
   <li>Machine Learning.
     <ul>
-      <li>Prepared by me for Spring 16-17: <a href="../ML_course/index.html" title="Introduction to Machine Learning -- Spring 16-17">Course repository</a>.</li>
+      <li>Prepared by me for Spring 16-17: <a href="../MLcourse/index.html" title="Introduction to Machine Learning -- Spring 16-17">Course repository</a>.</li>
     </ul>
   </li>
   <li>Probabilities &amp; Statistics.
@@ -346,7 +346,7 @@
         <p class="copyright text-muted">
 		  Mohamad Ghassany
 		  &nbsp;&bull;&nbsp;
-		  2016
+		  2017
 
 		  
 	    </p>
